refactor in handlers and usecases
