# docs/swagger.json
@@ -479,7 +479,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/studenthandlers.%D0%A1reateStudentInputDto"
+                            "$ref": "#/definitions/studentgroupHandlers.%D0%A1reateStudentInputDto"
                         }
                     }
                 ],
@@ -581,7 +581,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/studenthandlers.GetStudentClientsResponseDTO"
+                            "$ref": "#/definitions/studentclientHandlers.GetStudentClientsResponseDTO"
                         }
                     },
                     "400": {
@@ -660,6 +660,63 @@
                 "responses": {
                     "204": {
                         "description": "No Content"
+                    }
+                }
+            }
+        },
+        "/students/{studId}/groups/{groupId}": {
+            "post": {
+                "description": "Adds a student to a group using their IDs from the path",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Students"
+                ],
+                "summary": "Add student to group",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID of the student",
+                        "name": "studId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "ID of the group",
+                        "name": "groupId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/dto.StudentGroupResponseDTO"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
                     }
                 }
             }
@@ -1029,6 +1086,23 @@
                 }
             }
         },
+        "dto.StudentGroupResponseDTO": {
+            "type": "object",
+            "properties": {
+                "group_id": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "school_id": {
+                    "type": "string"
+                },
+                "student_id": {
+                    "type": "integer"
+                }
+            }
+        },
         "dto.StudentResponseDTO": {
             "type": "object",
             "properties": {
@@ -1102,7 +1176,7 @@
                 }
             }
         },
-        "studenthandlers.GetStudentClientsResponseDTO": {
+        "studentclientHandlers.GetStudentClientsResponseDTO": {
             "type": "object",
             "properties": {
                 "data": {
@@ -1110,6 +1184,17 @@
                     "items": {
                         "$ref": "#/definitions/bodtos.BoDTO_StudentClientsReponse"
                     }
+                }
+            }
+        },
+        "studentgroupHandlers.СreateStudentInputDto": {
+            "type": "object",
+            "properties": {
+                "group": {
+                    "$ref": "#/definitions/dto.StudentGroupCreateUpdateDTO"
+                },
+                "student": {
+                    "$ref": "#/definitions/dto.StudentCreateUpdateDTO"
                 }
             }
         },
@@ -1129,17 +1214,6 @@
                     "items": {
                         "$ref": "#/definitions/dto.StudentCreateUpdateDTO"
                     }
-                }
-            }
-        },
-        "studenthandlers.СreateStudentInputDto": {
-            "type": "object",
-            "properties": {
-                "group": {
-                    "$ref": "#/definitions/dto.StudentGroupCreateUpdateDTO"
-                },
-                "student": {
-                    "$ref": "#/definitions/dto.StudentCreateUpdateDTO"
                 }
             }
         },
